--- a/Helloworld-Kubernetes/src/main/resources/application.properties
+++ b/Helloworld-Kubernetes/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #server.port=8081
-#spring.redis.password=ZTC2022
+#spring.redis.password=
 #spring.redis.port=30085
 spring.redis.port=${REDIS_PORT}
 spring.session.store-type=redis
